--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,12 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+  }
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -122,12 +128,9 @@
 }
 
 
-html {
-  scroll-behavior: smooth;
-}
-
 html, body {
-  background: radial-gradient(circle,rgba(45, 55, 39, 1) 0%, rgba(27, 32, 37, 1) 100%);
+  scroll-behavior: smooth;
+  background: black;
 }
 
 @keyframes rock {
